feat: add markup&styles for generic card

--- a/index.html
+++ b/index.html
@@ -201,40 +201,6 @@
         </div>
       </section>
 
-      <!-- <section class="es-eyelashes">
-        <h2 class="es-eyelashes__title">
-          <strong>odpowiednia dla wszystkich</strong><br />
-          rodzajów rzęs
-        </h2>
-        <div class="es-eyelashes__container">
-          <div class="es-eyelashes__single es-eyelashes__vertical-text">
-            <p class="es-eyelashes__vertical">przed</p>
-            <p class="es-eyelashes__vertical">po</p>
-          </div>
-          <div class="es-eyelashes__single">
-            <img src="images/eyelash-1.png" alt="" class="es-eyelashes__img" />
-            <p class="es-eyelashes__before">PRZED</p>
-            <p class="es-eyelashes__text">rzadkie</p>
-            <img src="images/eyelash-1a.png" alt="" class="es-eyelashes__img" />
-            <p class="es-eyelashes__after">PO</p>
-          </div>
-          <div class="es-eyelashes__single">
-            <img src="images/eyelash-2.png" alt="" class="es-eyelashes__img" />
-            <p class="es-eyelashes__before">PRZED</p>
-            <p class="es-eyelashes__text">proste</p>
-            <img src="images/eyelash-2a.png" alt="" class="es-eyelashes__img" />
-            <p class="es-eyelashes__after">PO</p>
-          </div>
-          <div class="es-eyelashes__single">
-            <img src="images/eyelash-3.png" alt="" class="es-eyelashes__img" />
-            <p class="es-eyelashes__before">PRZED</p>
-            <p class="es-eyelashes__text">krótkie</p>
-            <img src="images/eyelash-3a.png" alt="" class="es-eyelashes__img" />
-            <p class="es-eyelashes__after">PO</p>
-          </div>
-        </div>
-      </section> -->
-
       <div class="es-slider">
         <h3 class="es-slider__title">PORADY <strong>MAKIJAŻYSTKI</strong></h3>
         <div class="es-slider__wrapper">
@@ -303,28 +269,28 @@
       </div>
 
       <section class="es-results-2">
+        <h2 class="es-results-2__title">
+          <strong> EFEKT?</strong>
+          RZĘSY UNIESIONE <br />I WYDŁUŻONE AŻ DO BRWI!
+        </h2>
         <div class="es-results-2__content">
-          <h2 class="es-you__title">
-            <strong> EFEKT?</strong>
-            RZĘSY UNIESIONE <br />I WYDŁUŻONE AŻ DO BRWI!
-          </h2>
-        </div>
-        <div class="es-results-2__images">
-          <div class="es-results-2__img">
-            <div class="es-results-2__before">
-              <p>Przed</p>
+          <div class="es-results-2__images">
+            <div class="es-results-2__img">
+              <div class="es-results-2__before">
+                <p>Przed</p>
+              </div>
+            </div>
+            <div class="es-results-2__img">
+              <div class="es-results-2__after">
+                <p>Po</p>
+              </div>
             </div>
           </div>
-          <div class="es-results-2__img">
-            <div class="es-results-2__after">
-              <p>Po</p>
-            </div>
+          <div class="es-results-2__text">
+            <p>
+              <strong> zdjęcia bez retuszu</strong>
+            </p>
           </div>
-        </div>
-        <div class="es-results-2__text">
-          <p>
-            <strong> zdjęcia bez retuszu</strong>
-          </p>
         </div>
       </section>
 
@@ -336,6 +302,11 @@
               <br />
               <strong> PEŁEN LOOK</strong>
             </p>
+            <img
+              src="images/products.png"
+              alt=""
+              class="es-look__products-desktop"
+            />
             <div class="es-look__products">
               <div class="es-look__single">
                 <div class="es-look__packshot">
