feat: reduce images weight, add vendor prefixes

--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
         <sup>*</sup>test instrumentalny, 27 kobiet
       </p>
     </div>
-    <script src="swiper.js"></script>
+    <script src="swiper-bundle.min.js"></script>
     <script>
       const swiper = new Swiper('.swiper', {
         loop: true,
