fix: path to image in html

--- a/index.html
+++ b/index.html
@@ -367,11 +367,7 @@
           <p class="es-routine__text">Ponieważ jesteś tego warta.</p>
         </div>
         <div class="es-routine__img">
-          <img
-            src="/images/photo-3.png"
-            alt=""
-            class="es-routine__img--model"
-          />
+          <img src="images/photo-3.png" alt="" class="es-routine__img--model" />
         </div>
       </div>
       <p class="es-routine__disclaimer">
